--- a/.github/workflows/rust-checks.yml
+++ b/.github/workflows/rust-checks.yml
@@ -1,11 +1,11 @@
-name: Rust Checks
+name: Rust checks
 
 on: [push, pull_request]
 
 jobs:
   clippy_check:
     # clippy and rustfmt (stable) already included
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/clippy-check@v1
@@ -14,7 +14,7 @@ jobs:
           args: --all-features
   
   rustfmt_check:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: cargo fmt -- --check
